@@ -1,3 +1,8 @@
+2009-05-07  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/40057
+	* gcc.c-torture/execute/pr40057.c: New test.
+
 2009-05-06  Janis Johnson  <janis187@us.ibm.com>
 
 	* gcc.dg/dfp/pr39986.c: New test.
